# libtgl

./: .gitignore  CMakeLists.txt  tester.cpp  vcpkg.json
include/tgl/: BadCastException.hpp  Exception.hpp  IEntrypoint.hpp  IIterable.hpp  IStream.hpp  Interface_notation.hpp  Object.hpp  String.hpp  SynchronizedObject.hpp  dynacast.hpp  export_defs.hpp  typeUtilities.hpp  utilities.hpp
include/tgl/ini/: IniField.hpp  IniFile.hpp  IniObject.hpp  IniObjectType.hpp
include/tgl/oom/: IOutOfModelObject.hpp  ObjectIdentifier.hpp
include/tgl/unsafe/: DynamicFixedWidthBuffer.hpp  DynamicObject.hpp
src/: BadCastException.cpp  Exception.cpp  Object.cpp  String.cpp  SynchronizedObject.cpp  utilities.cpp
src/ini/: IniField.cpp  IniFile.cpp
src/oom/: ObjectIdentifier.cpp
test/: TglDynacastTests.cpp  TglStringTests.cpp
tgl_runtime/: CMakeLists.txt  tgl_runtime.cpp  tgl_runtime.hpp
